--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "url": "https://github.com/vidbina/landing-page-templates/issues"
   },
   "homepage": "https://github.com/vidbina/landing-page-templates#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "http-server": "^0.12.1",
-    "puppeteer": "^3.0.0"
+    "puppeteer": "^3.0.0",
+    "standard": "^14.3.3"
   }
 }
