Install node-sass
WTF! Kind of shocking to see how much different packages are installed
as dependencies for node-sass. :facepalm:

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {},
   "devDependencies": {
     "http-server": "^0.12.1",
+    "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "puppeteer": "^3.0.0"
   }
