--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "capture": "node capture.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx prettier -c ."
   },
   "repository": {
     "type": "git",
